item 7: braced initializer

--- a/effective_modern_cpp/CMakeLists.txt
+++ b/effective_modern_cpp/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(EffectiveModernCpp deducing_types.cc)
+add_library(EffectiveModernCpp deducing_types.cc moving_to_modern_cpp.cc)
 
 target_include_directories(EffectiveModernCpp
        INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
